--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,8 @@
   "short_name": "Robbio",
   "description": "Robbio Progressive Web App",
   "start_url": "/",
-  "display": "fullscreen",
+  "display": "standalone",
+  "display_override": ["window-controls-overlay", "standalone", "minimal-ui"],
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
