--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,11 +3,9 @@
   "short_name": "Robbio",
   "description": "Robbio Progressive Web App",
   "start_url": "/",
-  "display": "fullscreen",
-  "display_override": ["fullscreen"],
+  "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#000000",
-  "prefer_related_applications": false,
+  "theme_color": "transparent",
   "icons": [
     {
       "src": "/icon-192x192.png",
