--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,9 +5,9 @@
   "start_url": "/",
   "display": "fullscreen",
   "background_color": "#000000",
-  "theme_color": "transparent",
+  "theme_color": "#000000",
   "orientation": "portrait",
-  "display_override": ["window-controls-overlay", "fullscreen"],
+  "display_override": ["fullscreen"],
   "categories": ["utilities"],
   "prefer_related_applications": false,
   "handle_links": "preferred",
