--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,11 +3,10 @@
   "short_name": "Robbio",
   "description": "Robbio Progressive Web App",
   "start_url": "/",
-  "display": "fullscreen",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "transparent",
   "orientation": "portrait",
-  "display_override": ["fullscreen"],
   "categories": ["utilities"],
   "prefer_related_applications": false,
   "handle_links": "preferred",
