--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,9 @@
   "description": "Robbio Progressive Web App",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "transparent",
   "orientation": "portrait",
+  "theme_color": "#000000",
+  "background_color": "#000000",
   "categories": ["utilities"],
   "prefer_related_applications": false,
   "handle_links": "preferred",
