--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,9 @@
   "short_name": "Robbio",
   "description": "Robbio Progressive Web App",
   "start_url": "/",
-  "display": "fullscreen",
-  "background_color": "#ffffff",
+  "display": "standalone",
+  "orientation": "portrait",
+  "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
