--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "description": "App ufficiale del Palio d'Urmon di Robbio.",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icon-192-transparent.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/icon-512-transparent.png",
       "sizes": "512x512",
       "type": "image/png"
     },
